[Mac][Material Design] Fix bookmark chevron button focus ring location.

This cl adjusts the bookmark bar's chevron button's focus ring, which
is 2pt too low.

R=tapted@chromium.org
BUG=617511

Review-Url: https://codereview.chromium.org/2074503002
Cr-Commit-Position: refs/heads/master@{#400309}

Former-commit-id: ce0f71bffa40beb738e2579efd91d3a0260dd010